[gd_scene load_steps=7 format=3 uid="uid://bvpj3dra8smu2"]

[ext_resource type="Script" path="res://Scripts/Entities/Player.gd" id="1_4c4uh"]
[ext_resource type="SpriteFrames" uid="uid://b3w8ovso4iwkb" path="res://Tiles/Entities/Characters.tres" id="2_1yvr0"]
[ext_resource type="Script" path="res://Scripts/Entities/Behaviors/HurtBox.gd" id="3_36vi1"]
[ext_resource type="Script" path="res://Scripts/Entities/Behaviors/HealthComponent.gd" id="4_27l3h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wi2x7"]
size = Vector2(20, 26.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ju3wd"]
size = Vector2(20, 26.5)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("health")]
scale = Vector2(2, 2)
collision_layer = 2
motion_mode = 1
script = ExtResource("1_4c4uh")
health = NodePath("HealthComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_1yvr0")
animation = &"blue"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.75)
shape = SubResource("RectangleShape2D_wi2x7")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health_bar")]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_36vi1")
health_bar = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -0.75)
shape = SubResource("RectangleShape2D_ju3wd")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_27l3h")
max_health = 20

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
